$Id$

version 1.8.9 Vala (2007-02-16):

  - changed LMS homepage links to http://lms.org.pl (alec)
  - updated ethercodes.txt (alec)
  - changed registration hosts register.lms.org.pl (for future use) (lukasz)

version 1.8.8 Selana (2006-12-13):

  - fix: while cash receipt's editing if date isn't changed time should also be 
    not toutched (alec)
  - fixed nodes searching with 'OR' operator (alec)
  - in quicksearch popup fixed row description when node was found by ID (alec)
  - fixed some forms in Firefox - added display:inline style (alec)
  - fixed lms-traffic version number (alec)

version 1.8.7 Adria (2006-10-17):

  - setting document's 'To' date to the end of the day (alec)
  - fixed helpdesk tickets searching module bug occuring while results page
    change and with enabled register_globals (alec)
  - included credit notes on covenants list in New Receipt form (alec)
  - fixed user's allowed hosts checking screwed in 1.8.6 version  (alec)

version 1.8.6 Zarah (2006-09-02):

  - lmsd/parser: fixed T-Script's problem with big numbers (alec)
  - lmsd/parser: support for multiple +, -, *, / operators in expression (alec)
  - BTS#0000570: design fix for IE in customer info box (alec)
  - BTS#0000568: fixed XSS vulnerability (s_n/alec)
  - fixed Sale Registry sorting order (alec)
  - BTS#0000586: fixed summary on Customers List when using some filters (alec)
  - remembering of selected template at document addition form when some
    errors occured (alec)
  - fixed potential problem with to_words() and float numbers on cash receipt
    printout (alec)
  - BTS#0000591: fixed problem with max_execution_time exceeding, added support
    for octet-format mask in 'allow_from' option and users IP authorization (alec)

version 1.8.5 Sina (2006-07-25):

  - fixed tickets searching with quicksearch input (alec)
  - BTS#0000576: fixed problem with MAC change (alec)
  - BTS#0000569: saved owner context when adding nodes with reuse
    checkbox (alec)